name:                haskell-eth-rpc
version:             0.1.0.0
synopsis:            Testing Ethereum JSON RPC
description:         Please see README.md
homepage:            https://github.com/sseefried/haskell-eth-rpc#readme
license:             BSD3
license-file:        LICENSE
author:              Sean Seefried
maintainer:          sean.seefried@gmail.com
copyright:           2016 Sean Seefried
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , text
                     , json-rpc-client
                     , lens
                     , mtl
                     , wreq >= 0.4.1.0 && < 0.4.2

  default-language:    Haskell2010

-- executable haskell-eth-rpc-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , haskell-eth-rpc
--   default-language:    Haskell2010

test-suite haskell-eth-rpc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-eth-rpc
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sseefried/haskell-eth-rpc
